Fix alignment of last updated date

--- a/src/components/TicketListItem.css
+++ b/src/components/TicketListItem.css
@@ -9,7 +9,7 @@
 .ticket-content {
 	flex: 1;
 }
-.ticket-summary {
+.ticket-list-item .primary {
   flex-grow: 1;
 }
 
